added changes on step 4 and answered all question before

--- a/CIS3285_Unit4_StudentMVC_2024/Views/Student/Delete.cshtml
+++ b/CIS3285_Unit4_StudentMVC_2024/Views/Student/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CIS3285_Unit4_StudentMVC_2024.Models.StudentModel
+﻿@model CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface
 
 <h1>Delete</h1>
 
@@ -32,5 +32,4 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
-
 </div>
