--- a/CIS3285_Unit4_StudentMVC_2024/Views/Student/Edit.cshtml
+++ b/CIS3285_Unit4_StudentMVC_2024/Views/Student/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CIS3285_Unit4_StudentMVC_2024.Models.StudentModel
+﻿@model CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface
 
 @{
     ViewData["Title"] = "Edit";
